--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MySqlConnection": "Server=localhost;Database=cereal_database;User=root;Pwd=bWsEocb2r706!;"
+    "MySqlConnection": "Server=localhost;Database=cereal_database;User=root;Pwd=1q2w3e4r;"
   },
   "Logging": {
     "LogLevel": {
